# BKHD-FanController

./: .gitignore  .gitmodules  README.md
docs/: hardware-notes.md  protocol.md
firmware/: CMakeLists.txt  STM32G031K8Tx.ld  arm-none-eabi.cmake
firmware/Inc/: buzzer.h  fan_control.h  main.h  stm32g0xx_hal_conf.h  tach_measure.h  uart_protocol.h  watchdog.h
firmware/Src/: buzzer.c  fan_control.c  main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c  system_stm32g0xx.c  tach_measure.c  uart_protocol.c  watchdog.c
host/: config.yaml  fan-controller.service  fan_controller.py
